# MSCBOTv3

./: CMakeLists.txt  Dockerfile  Makefile  README.md  bot.cpp  setup.sh
